# fast

./: .buildinfo  .gitignore  README.md  configuration.html  demo_params.py  genindex.html  index.html  install.html  objects.inv  output.html  py-modindex.html  pyproject.toml  quick_script.py  requirements.txt  search.html  searchindex.js  setup.py
.doctrees/: configuration.doctree  environment.pickle  index.doctree  install.doctree  output.doctree
.doctrees/autoapi/: index.doctree
.doctrees/autoapi/fast/: index.doctree
.doctrees/autoapi/fast/ao_power_spectra/: index.doctree
.doctrees/autoapi/fast/comms/: index.doctree
.github/workflows/: documentation.yml  unit_test.yml
_sources/: configuration.rst.txt  install.rst.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/fast/: index.rst.txt
autoapi/: index.html
autoapi/fast/: index.html
autoapi/fast/ao_power_spectra/: index.html
autoapi/fast/comms/: index.html
autoapi/fast/complete_orbit_simulation/: index.html
autoapi/fast/conf/: index.html
autoapi/fast/fast/: index.html
autoapi/fast/funcs/: index.html
autoapi/fast/turbulence_models/: index.html
doc/: conf.py  configuration.rst  index.rst  install.rst  output.rst
fast/: __init__.py  ao_power_spectra.py  comms.py  complete_orbit_simulation.py  conf.py  fast.py  funcs.py  turbulence_models.py
fsocffs/: __init__.py  ao_power_spectra.py  fsocffs.py  funcs.py  turbulence_models.py
gui/: gui.py  gui_params.py
test/: benchmark.py  test_notebook.ipynb  test_params.py  test_satellite_param.py  test_script.py  tests_pytest.py
(+12 files in other folders)
